# cpp_gl_stg_contr

./: CMakeLists.txt  Makefile  run.sh  stage_controller.workspace
.codelite/: refactoring.db  stage_controller.session
src/: GLXColor.cpp  GLXColor.h  GLXControls.cpp  GLXControls.h  GLXInput.cpp  GLXInput.h  GLXManager.cpp  GLXManager.h  GLXShapes.cpp  GLXShapes.h  main.cpp
stage_controller/: main.cpp  stage_controller.mk  stage_controller.project
stage_controller/Debug/: stage_controller
